예외처리 버그수정